--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,22 +2,16 @@
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>B.E in Computer Science</h1>
+            <span>RSR-RCET, CSVTU University</span>
+            <span><address>Bhilai, C.G</address><time>2014 to 2018</time></span>
         </header>
-        <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
-        </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>High School</h1>
+            <span>Krishna Public School </span>
+            <span><address>Nehru Nagar, India</address><time>2012 to 2014</time></span>
         </header>
-        <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
-        </p>
     </article>
 </section>
