--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,20 +2,11 @@
     <h1>Initiatives</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
-        </p>
-    </article>
-    <article>
-        <header>
             <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
+            <span><address>RSR-RCET, Bhilai(C.G)</address><time>2014</time></span>
         </header>
         <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+            Physics Workshop.
         </p>
     </article>
 </section>
