--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,11 +8,11 @@
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
             &nbsp;&nbsp;<em>C/C++</em>, <em>Python</em>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
         </p>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             &nbsp;&nbsp;<em>Java</em>, <em>PHP</em> &amp; <em>Git</em>
         </p>
         
