--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -26,7 +26,7 @@
 <div class="container">
     <header class="three columns">
         <img src="{{ site.baseurl }}static/img/profile.jpg" class="me">
-        <h1>{{ site.name }}</h1>
+        <h1><a href="{{site.website_full}}">{{ site.name }}</a></h1>
         <p>
             <a href="{{ site.tel_full }}">{{ site.tel }}</a>
         </p>
@@ -52,8 +52,7 @@
         {{ content }}
 
     <footer class="thirteen columns">
-        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-            <a href="https://www.github.com/myjekyll/vitae">vitae</a> with ♥</p>
+        <p>© All rights reserved. Made by <a href="http://www.ayushwatnani.github.io">Ayush Watnani</a> with ♥</p>
     </footer>
     </div>
 </div>
