--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -52,7 +52,7 @@
         {{ content }}
 
     <footer class="thirteen columns">
-        <p>© All rights reserved. Made by <a href="http://www.ayushwatnani.github.io">Ayush Watnani</a> with ♥</p>
+        <p>© All rights reserved. Made by <a href="{{site.website_full}}">Ayush Watnani</a> with ♥</p>
     </footer>
     </div>
 </div>
