--- a/_includes/education.html
+++ b/_includes/education.html
@@ -10,8 +10,8 @@
     <article>
         <header>
             <h1>High School</h1>
-            <span>Krishna Public School </span>
-            <span><address>Nehru Nagar, India</address><time>2012 to 2014</time></span>
+            <span>M.B.V.P </span>
+            <span><address>Vaishali Nagar, India</address><time>2012 to 2014</time></span>
         </header>
     </article>
 </section>
