--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,9 +2,9 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Campus Ambassador</h1>
-            <span><address>IIT Bombay</address><time>Oct-Dec 2016</time></span>
+            <h1>None..</h1>
+            <span><address>IXYZ</address><time>Oct-Dec 2016</time></span>
         </header>
-        <p>College Representative for Techfest 2016, technical festival of IIT Bombay </p>
+        <p>blah blah...</p>
     </article>
 </section>
