--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -3,10 +3,10 @@
     <article>
         <header>
             <h1>Student Volunteer</h1>
-            <span><address>RSR-RCET, Bhilai(C.G)</address><time>2014</time></span>
+            <span><address>RSR-RCET, Bhilai(C.G)</address><time>2016</time></span>
         </header>
         <p>
-            Physics Workshop.
+            Sports Club.
         </p>
     </article>
 </section>
