--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -25,10 +25,10 @@
 <body>
 <div class="container">
     <header class="three columns">
-        <img src="{{ site.baseurl }}static/img/profile.jpg" class="me">
+        <img src="{{ site.baseurl }}static/img/dc.jpg" class="me">
         <h1><a href="{{site.website_full}}">{{ site.name }}</a></h1>
         <p>
-            <a href="{{ site.tel_full }}">{{ site.tel }}</a>
+            {{ site.tel }}
         </p>
         <address>
             <a href="{{ site.google_maps }}">
@@ -52,7 +52,7 @@
         {{ content }}
 
     <footer class="thirteen columns">
-        <p>© All rights reserved. Made by <a href="{{site.website_full}}">Ayush Watnani</a> with ♥</p>
+        <p>© All rights reserved. Made by <a href="{{site.website_full}}">Deepak Chauhan</a> with ♥</p>
     </footer>
     </div>
 </div>
